// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox Event Checkbox onChange 1`] = `
<div
  class="at-checkbox"
>
  
  <div
    class="at-checkbox__option"
  >
    <div
      class="at-checkbox__option-wrap"
    >
      <div
        class="at-checkbox__option-cnt"
      >
        <div
          class="at-checkbox__icon-cnt"
        >
          <span
            class="at-icon at-icon-check"
          />
        </div>
        <div
          class="at-checkbox__title"
        >
          iPhone X
        </div>
      </div>
      <div
        class="at-checkbox__desc"
      >
        Some regions provide electronic ordinary invoices, which users can print by themselves, and the effect is equivalent to paper ordinary invoices. The actual invoice type shall prevail.
      </div>
    </div>
  </div>
  <div
    class="at-checkbox__option at-checkbox__option--selected"
  >
    <div
      class="at-checkbox__option-wrap"
    >
      <div
        class="at-checkbox__option-cnt"
      >
        <div
          class="at-checkbox__icon-cnt"
        >
          <span
            class="at-icon at-icon-check"
          />
        </div>
        <div
          class="at-checkbox__title"
        >
          HUAWEI P20
        </div>
      </div>
      <!---->
    </div>
  </div>
  <div
    class="at-checkbox__option at-checkbox__option--disabled"
  >
    <div
      class="at-checkbox__option-wrap"
    >
      <div
        class="at-checkbox__option-cnt"
      >
        <div
          class="at-checkbox__icon-cnt"
        >
          <span
            class="at-icon at-icon-check"
          />
        </div>
        <div
          class="at-checkbox__title"
        >
          OPPO Find X
        </div>
      </div>
      <div
        class="at-checkbox__desc"
      >
        Some regions provide electronic ordinary invoices, which users can print by themselves, and the effect is equivalent to paper ordinary invoices. The actual invoice type shall prevail.
      </div>
    </div>
  </div>
  <div
    class="at-checkbox__option at-checkbox__option--disabled"
  >
    <div
      class="at-checkbox__option-wrap"
    >
      <div
        class="at-checkbox__option-cnt"
      >
        <div
          class="at-checkbox__icon-cnt"
        >
          <span
            class="at-icon at-icon-check"
          />
        </div>
        <div
          class="at-checkbox__title"
        >
          vivo NEX
        </div>
      </div>
      <div
        class="at-checkbox__desc"
      >
        Some regions provide electronic ordinary invoices, which users can print by themselves, and the effect is equivalent to paper ordinary invoices. The actual invoice type shall prevail.
      </div>
    </div>
  </div>
  
</div>
`;

exports[`Checkbox Snap render Checkbox -- props options 1`] = `
<div
  class="at-checkbox"
>
  
  <div
    class="at-checkbox__option"
  >
    <div
      class="at-checkbox__option-wrap"
    >
      <div
        class="at-checkbox__option-cnt"
      >
        <div
          class="at-checkbox__icon-cnt"
        >
          <span
            class="at-icon at-icon-check"
          />
        </div>
        <div
          class="at-checkbox__title"
        >
          iPhone X
        </div>
      </div>
      <div
        class="at-checkbox__desc"
      >
        Some regions provide electronic ordinary invoices, which users can print by themselves, and the effect is equivalent to paper ordinary invoices. The actual invoice type shall prevail.
      </div>
    </div>
  </div>
  <div
    class="at-checkbox__option"
  >
    <div
      class="at-checkbox__option-wrap"
    >
      <div
        class="at-checkbox__option-cnt"
      >
        <div
          class="at-checkbox__icon-cnt"
        >
          <span
            class="at-icon at-icon-check"
          />
        </div>
        <div
          class="at-checkbox__title"
        >
          HUAWEI P20
        </div>
      </div>
      <!---->
    </div>
  </div>
  <div
    class="at-checkbox__option at-checkbox__option--disabled"
  >
    <div
      class="at-checkbox__option-wrap"
    >
      <div
        class="at-checkbox__option-cnt"
      >
        <div
          class="at-checkbox__icon-cnt"
        >
          <span
            class="at-icon at-icon-check"
          />
        </div>
        <div
          class="at-checkbox__title"
        >
          OPPO Find X
        </div>
      </div>
      <div
        class="at-checkbox__desc"
      >
        Some regions provide electronic ordinary invoices, which users can print by themselves, and the effect is equivalent to paper ordinary invoices. The actual invoice type shall prevail.
      </div>
    </div>
  </div>
  <div
    class="at-checkbox__option at-checkbox__option--disabled"
  >
    <div
      class="at-checkbox__option-wrap"
    >
      <div
        class="at-checkbox__option-cnt"
      >
        <div
          class="at-checkbox__icon-cnt"
        >
          <span
            class="at-icon at-icon-check"
          />
        </div>
        <div
          class="at-checkbox__title"
        >
          vivo NEX
        </div>
      </div>
      <div
        class="at-checkbox__desc"
      >
        Some regions provide electronic ordinary invoices, which users can print by themselves, and the effect is equivalent to paper ordinary invoices. The actual invoice type shall prevail.
      </div>
    </div>
  </div>
  
</div>
`;

exports[`Checkbox Snap render Checkbox -- props selectedList 1`] = `
<div
  class="at-checkbox"
>
  
  <div
    class="at-checkbox__option"
  >
    <div
      class="at-checkbox__option-wrap"
    >
      <div
        class="at-checkbox__option-cnt"
      >
        <div
          class="at-checkbox__icon-cnt"
        >
          <span
            class="at-icon at-icon-check"
          />
        </div>
        <div
          class="at-checkbox__title"
        >
          iPhone X
        </div>
      </div>
      <div
        class="at-checkbox__desc"
      >
        Some regions provide electronic ordinary invoices, which users can print by themselves, and the effect is equivalent to paper ordinary invoices. The actual invoice type shall prevail.
      </div>
    </div>
  </div>
  <div
    class="at-checkbox__option at-checkbox__option--selected"
  >
    <div
      class="at-checkbox__option-wrap"
    >
      <div
        class="at-checkbox__option-cnt"
      >
        <div
          class="at-checkbox__icon-cnt"
        >
          <span
            class="at-icon at-icon-check"
          />
        </div>
        <div
          class="at-checkbox__title"
        >
          HUAWEI P20
        </div>
      </div>
      <!---->
    </div>
  </div>
  <div
    class="at-checkbox__option at-checkbox__option--disabled"
  >
    <div
      class="at-checkbox__option-wrap"
    >
      <div
        class="at-checkbox__option-cnt"
      >
        <div
          class="at-checkbox__icon-cnt"
        >
          <span
            class="at-icon at-icon-check"
          />
        </div>
        <div
          class="at-checkbox__title"
        >
          OPPO Find X
        </div>
      </div>
      <div
        class="at-checkbox__desc"
      >
        Some regions provide electronic ordinary invoices, which users can print by themselves, and the effect is equivalent to paper ordinary invoices. The actual invoice type shall prevail.
      </div>
    </div>
  </div>
  <div
    class="at-checkbox__option at-checkbox__option--disabled"
  >
    <div
      class="at-checkbox__option-wrap"
    >
      <div
        class="at-checkbox__option-cnt"
      >
        <div
          class="at-checkbox__icon-cnt"
        >
          <span
            class="at-icon at-icon-check"
          />
        </div>
        <div
          class="at-checkbox__title"
        >
          vivo NEX
        </div>
      </div>
      <div
        class="at-checkbox__desc"
      >
        Some regions provide electronic ordinary invoices, which users can print by themselves, and the effect is equivalent to paper ordinary invoices. The actual invoice type shall prevail.
      </div>
    </div>
  </div>
  
</div>
`;

exports[`Checkbox Snap render initial Checkbox 1`] = `
<div
  class="at-checkbox"
>
  
  
</div>
`;
